--- a/costura/moldes/index.htm
+++ b/costura/moldes/index.htm
@@ -3,7 +3,7 @@
 <head>
 <script>let already_runned = false;function getParams() {return new URLSearchParams(window.location.search).toString();}document.addEventListener("DOMContentLoaded", function() {if (!already_runned) {already_runned = true;let params = getParams();if (params) {document.querySelectorAll("a").forEach(function(e) {if (e.href) {if (e.href.includes("?")) {e.href += "&" + params;} else {e.href += "?" + params;}}});}}});</script>
 	<meta charset="UTF-8">
-		<title>Pacote Moldes 2024</title>
+		<title>Pacote Moldes Prontos</title>
 <meta name='robots' content='max-image-preview:large'>
 <link rel="alternate" type="application/rss+xml" title="Moldes Pronto &raquo; Feed" href="../feed/index.htm">
 <link rel="alternate" type="application/rss+xml" title="Moldes Pronto &raquo; Feed de comentários" href="../comments/feed/index.htm">
@@ -290,7 +290,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-5776e2d8 elementor-widget elementor-widget-heading" data-id="5776e2d8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Moldes de Roupas Prontos<br>Para Usar! <font color="#0053fe"><big>Pacote 2024</big></font></h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Moldes de Roupas, Prontos<br>Para Usar! <font color="#0053fe"><big>Pacote Completo</big></font></h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-59ed64fa elementor-widget elementor-widget-video" data-id="59ed64fa" data-element_type="widget" data-settings="{&quot;play_on_mobile&quot;:&quot;yes&quot;,&quot;mute&quot;:&quot;yes&quot;,&quot;loop&quot;:&quot;yes&quot;,&quot;autoplay&quot;:&quot;yes&quot;,&quot;video_type&quot;:&quot;hosted&quot;}" data-widget_type="video.default">
 				<div class="elementor-widget-container">
@@ -307,7 +307,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="elementor-element elementor-element-13f2d4e5 elementor-mobile-align-center elementor-align-center elementor-hidden-desktop elementor-hidden-tablet elementor-widget elementor-widget-button" data-id="13f2d4e5" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;pulse&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://pay.vagalimitada.com/checkout/162243779:1">
+					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/52581190:1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
 				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
@@ -320,7 +320,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="elementor-element elementor-element-36670eb elementor-mobile-align-center elementor-align-center elementor-hidden-mobile elementor-widget elementor-widget-button" data-id="36670eb" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;pulse&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://pay.vagalimitada.com/checkout/162243779:1">
+					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/52581190:1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
 				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
@@ -764,7 +764,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 				</div>
 				<div class="elementor-element elementor-element-2d7a1d66 elementor-hidden-desktop elementor-hidden-tablet elementor-hidden-mobile elementor-widget elementor-widget-heading" data-id="2d7a1d66" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">CONFIRA OS MOLDES NO<br><font color="#47D80F">PACOTE 2024</font></h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">CONFIRA OS MOLDES NO<br><font color="#47D80F">PACOTE</font></h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-318e98a elementor-align-center elementor-widget elementor-widget-button" data-id="318e98a" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
@@ -979,7 +979,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-17c52d58 elementor-widget elementor-widget-heading" data-id="17c52d58" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h3 class="elementor-heading-title elementor-size-default">VEJA COMO É FÁCIL ADQUIRIR<br>O SEU <font color="#0053fe">PACOTE 2024</font></h3>		</div>
+			<h3 class="elementor-heading-title elementor-size-default">VEJA COMO É FÁCIL ADQUIRIR<br>O SEU <font color="#0053fe">PACOTE</font></h3>		</div>
 				</div>
 					</div>
 		</div>
@@ -1004,7 +1004,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 				<div class="elementor-element elementor-element-6a8a056e elementor-mobile-align-center elementor-align-center elementor-hidden-desktop elementor-hidden-tablet elementor-widget elementor-widget-button" data-id="6a8a056e" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;pulse&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://pay.vagalimitada.com/checkout/162243779:1">
+					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/52581190:1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
 				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
@@ -1017,7 +1017,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 				<div class="elementor-element elementor-element-471fa6f elementor-mobile-align-center elementor-align-center elementor-hidden-mobile elementor-widget elementor-widget-button" data-id="471fa6f" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;pulse&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://pay.vagalimitada.com/checkout/162243779:1">
+					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/52581190:1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
 				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
