--- a/moldesparafeltro/index.html
+++ b/moldesparafeltro/index.html
@@ -956,7 +956,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-1f7d9a67 elementor-align-center elementor-widget elementor-widget-button" data-id="1f7d9a67" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/168163250:1">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://app.vagalimitada.com/checkout/169361620:1?afid=butLmTFU0w">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
@@ -1078,7 +1078,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-251ff89 elementor-align-center elementor-widget elementor-widget-button" data-id="251ff89" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/168163249:1">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://app.vagalimitada.com/checkout/169361619:1?afid=butLmTFU0w">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR PLANO OURO</span>
 					</span>
