--- a/costura/moldes/index.htm
+++ b/costura/moldes/index.htm
@@ -307,7 +307,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="elementor-element elementor-element-13f2d4e5 elementor-mobile-align-center elementor-align-center elementor-hidden-desktop elementor-hidden-tablet elementor-widget elementor-widget-button" data-id="13f2d4e5" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;pulse&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/170608504:1?afid=Mb2FpvEGFy">
+					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/170634545:1?afid=kR02tIjXYN">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
 				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
@@ -320,7 +320,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="elementor-element elementor-element-36670eb elementor-mobile-align-center elementor-align-center elementor-hidden-mobile elementor-widget elementor-widget-button" data-id="36670eb" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;pulse&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/170608504:1?afid=Mb2FpvEGFy">
+					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/170634545:1?afid=kR02tIjXYN">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
 				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
@@ -1004,7 +1004,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 				<div class="elementor-element elementor-element-6a8a056e elementor-mobile-align-center elementor-align-center elementor-hidden-desktop elementor-hidden-tablet elementor-widget elementor-widget-button" data-id="6a8a056e" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;pulse&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/170608504:1?afid=Mb2FpvEGFy">
+					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/170634545:1?afid=kR02tIjXYN">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
 				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
@@ -1017,7 +1017,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 				<div class="elementor-element elementor-element-471fa6f elementor-mobile-align-center elementor-align-center elementor-hidden-mobile elementor-widget elementor-widget-button" data-id="471fa6f" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;pulse&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/170608504:1?afid=Mb2FpvEGFy">
+					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://app.vagalimitada.com/checkout/170634545:1?afid=kR02tIjXYN">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
 				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
