--- a/croche2500modelos/croche/index.htm
+++ b/croche2500modelos/croche/index.htm
@@ -257,10 +257,10 @@ document.querySelector('#views b.date').innerText = data;
 </script>		</div>
 
 	<meta charset="UTF-8">
-			<title>Crochê</title>
+			<title>+2500 Modelos de Crochê</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name='robots' content='max-image-preview:large'>
-<title>Crochê</title>
+<title>+2500 Modelos de Crochê</title>
 <link rel="alternate" type="application/rss+xml" title="innovatevibe.online &raquo; Feed" href="../feed/index.htm">
 <link rel="alternate" type="application/rss+xml" title="innovatevibe.online &raquo; Comments Feed" href="../comments/feed/index.htm">
 <script>
@@ -427,7 +427,7 @@ fbq('track', 'PageView');
 				<div class="elementor-element elementor-element-e36a796 elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="e36a796" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://vagalimitada.com/step/1331/?ref=4">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://app.vagalimitada.com/checkout/170634551:1?afid=ZIJvITe5y1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">QUERO MODELOS INCRÍVEIS</span>
 					</span>
@@ -679,7 +679,7 @@ fbq('track', 'PageView');
 				<div class="elementor-element elementor-element-6f2574e6 elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="6f2574e6" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://vagalimitada.com/step/1331/?ref=4">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://app.vagalimitada.com/checkout/170634551:1?afid=ZIJvITe5y1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">OBTER AGORA</span>
 					</span>
@@ -822,7 +822,7 @@ fbq('track', 'PageView');
 				<div class="elementor-element elementor-element-242e030a elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="242e030a" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://vagalimitada.com/step/1331/?ref=4">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://app.vagalimitada.com/checkout/170634551:1?afid=ZIJvITe5y1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">OBTER AGORA</span>
 					</span>
